 * Add a system check to warn when a `django-storages` backend is configured to allow overwriting (Rishabh jain)
 * Update admin focus outline color to have higher contrast against white backgrounds (Thibaud Colas)
 * Implement latest design for the admin dashboard header (Thibaud Colas, Steven Steinwand)
 * Add base Axe accessibility checker integration within userbar, with count and list of errors (Albina Starykova)
 * Allow configuring Axe accessibility checker integration via `construct_wagtail_userbar` hook (Sage Abdullah)
 * Support pinning and un-pinning the rich text editor toolbar depending on user preference (Thibaud Colas)
 * Make the rich text block trigger and slash-commands always available regardless of where the cursor is (Thibaud Colas)
 * Adjust the size of panel labels on the "Account" form (Thibaud Colas)
 * Delay hiding the contents of the side panels when closing, so the animation is smoother (Thibaud Colas)
 * Added ability to submit snippets for moderation with `WorkflowMixin` (Sage Abdullah)
 * Fix: Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
 * Fix: Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
 * Fix: Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
 * Fix: references extraction for ChooserBlock (Alex Tomkins)
 * Fix: Incorrectly formatted link in the documentation for Wagtail community support (Bolarinwa Comfort Ajayi)
 * Fix: Text within status tags text will now resize correctly when customizing browser font size (Mary Ojo)
 * Fix: Ensure logo shows correctly on log in page in Windows high-contrast mode (Loveth Omokaro)
 * Fix: Comments notice background overflows its container (Yekasumah)
 * Fix: Ensure links within help blocks meet colour contrast guidelines for accessibility (Theresa Okoro)