@@ -80,7 +80,8 @@ This feature was developed by Matt Westcott, and sponsored by [YouGov](https://y
  * Add a system check to warn when a `django-storages` backend is configured to allow overwriting (Rishabh jain)
  * Update admin focus outline color to have higher contrast against white backgrounds (Thibaud Colas)
  * Implement latest design for the admin dashboard header (Thibaud Colas, Steven Steinwand)
- * Add base Axe accessibility checker integration within userbar, with count and list of errors (Albina Starykova)
+ * Add Axe accessibility checker integration within userbar, with count and list of errors (Albina Starykova)
+ * Restyle the userbar to follow the visual design of the Wagtail admin (Albina Starykova)
  * Allow configuring Axe accessibility checker integration via `construct_wagtail_userbar` hook (Sage Abdullah)
  * Adjust the size of panel labels on the "Account" form (Thibaud Colas)
  * Delay hiding the contents of the side panels when closing, so the animation is smoother (Thibaud Colas)
