@@ -24,7 +24,8 @@ Changelog
  * Add a system check to warn when a `django-storages` backend is configured to allow overwriting (Rishabh jain)
  * Update admin focus outline color to have higher contrast against white backgrounds (Thibaud Colas)
  * Implement latest design for the admin dashboard header (Thibaud Colas, Steven Steinwand)
- * Add base Axe accessibility checker integration within userbar, with count and list of errors (Albina Starykova)
+ * Add Axe accessibility checker integration within userbar, with count and list of errors (Albina Starykova)
+ * Restyle the userbar to follow the visual design of the Wagtail admin (Albina Starykova)
  * Allow configuring Axe accessibility checker integration via `construct_wagtail_userbar` hook (Sage Abdullah)
  * Support pinning and un-pinning the rich text editor toolbar depending on user preference (Thibaud Colas)
  * Make the rich text block trigger and slash-commands always available regardless of where the cursor is (Thibaud Colas)
